ajuste a application.yaml

--- a/infrastructure/src/main/resources/application.yaml
+++ b/infrastructure/src/main/resources/application.yaml
@@ -36,7 +36,7 @@ feign:
 server:
     port: 8080
     servlet:
-        context-path: /example
+        context-path: /api
         session:
             timeout: 21600s
 
